assets/style.css
/* ... */
nav a svg {
  fill: var(--ash_gray);
  margin-top: 0.25em;
}

nav a:hover {
  color: var(--alabaster);
}
nav a:hover svg {
  fill: var(--alabaster);
}

/* --- Middle section ---------------------------------------------- */


section {
  /* flex-grow: 1; */
  position: relative;
}

section.sided {
  display: flex;
  flex-direction: column;
  gap: 2rem;;
}

@media only screen and (min-width: 825px) {
  section.sided {
    flex-direction: row;
  }
}

/* --- Main block ---------------------------------------------- */

main {
  position: relative;
  /* flex-grow: 1; */
  /* flex-shrink: 1; */
  /* width: fit-content; */
}

@media only screen and (min-width: 825px) {
  main {
    /* width: 67%; */
    /* width: clamp(min-content, min-content, 800px); */
    /* width: clamp(500px, 700px, 800px); */
    /* min-width: 450px; */
    /* width: max( 20%, 450px ); */
    /* min-width: 550px; */
    /* width: 30rem; */
    /* width: fit-content; */
  }
}

article {
  padding: 1.5em;
  color: var(--smoky_black);
  background-color: var(--alabaster);
  border-radius: 0.125em;
  box-shadow: 0 0.125em 0.2em 0 var(--smoky_black);
  text-align: left;
}

article.verse {
  font-size: 1.25rem;
  /* margin-left: 0.2em; */
  /* margin-right: 0.2em; */
  min-height: 1em;
  padding: 2em;
  min-width: max-content;
  width: 100%;
  /* min-width: max(max-content, 600px); */
  /* min-width: clamp(max-content, 600px, 620px); */
  
}

article.record {
  min-width: 300px; 
}
@media only screen and (min-width: 825px) {
  article.verse {
    width: 400px;
  }
  article.record {
    min-width: 500px; 
  }
}

article.verse h1 {
  font-weight: 700;
  font-size: 1.75rem;
  margin-top: 0.3em;
  margin-bottom: 1em;
  line-height: 110%;
  color: var(--ebony);
  max-width: calc(100vw - 5em);
}

@media only screen and (min-width: 825px) {
  article.verse h1 {
    max-width: 18em;
  }
}

h1.error {
  color: var(--error_red) !important;
}

article.verse pre {
  display: none;
}

article.verse pre + p {
  margin-top: 0;
}

article.verse h1.margin_bottom_1em {
  margin-bottom: 1em;
}

article.verse h1.margin_bottom_2em {
  margin-bottom: 2em;
}

article.verse p {
  margin-top: 1em;
  margin-bottom: 1em;
  /* white-space: nowrap; */
  /* width: fit-content; */
}

@media only screen and (min-width: 825px) {
  article.verse {
    /* padding-left: 2em; */
  }
}

article.verse .date {
  color: var(--air_superiority_blue);
  font-style: italic;
  margin-top: 1em;
  margin-right: 3em;
  text-align: right;
}

article.verse p.comment {
  color: var(--ebony);
  font-style: italic;
  margin-left: 1.125em;
}
article.verse .authorcomment {
  color: var(--ebony);
  font-style: italic;
  margin-left: 1.125em;
}
article.verse .footer {
  color: var(--black_olive);
  font-style: italic;
}
article.verse .hidden {
  display: none;
}
article.verse .book {
  color: var(--ebony);
  font-style: italic;
}
article.verse .to {
  color: var(--black_olive);
  font-style: italic;
}
article.verse div.quote {
  color: var(--ebony);
  padding-left: 1em;
  border-left: 1pt solid var(--smoky_black);
}

.verse svg {
  fill: var(--ash_gray);
  margin-top: 0.25em;
  left: 50%;
  transform: translateX(-50%);
  position: relative;
}

.verse audio {
  width: 100%;
}

article.verse span.comment {
  color: var(--air_superiority_blue);
  font-style: italic;
}

/* --- Side ---------------------------------------------- */

aside {
  /* flex-shrink: 1; */
  /* flex-grow: 1; */
}

h3 {
  margin-bottom: 1em;
  margin-left: 1em;
  font-size: 150%;
  color: var(--ash_gray);
  font-weight: 700;
}

ol {
  list-style: none;
  counter-reset: custom-counter;
  color: var(--battleship_gray);
  /* font-size: 0.875rem; */
  /* font-size: 75%; */
  line-height: 1.3;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
  padding-inline-start: 0;
  font-size: 0.875rem;
}

.two_column ol {
  column-count: 1;
  column-gap: 1em;
}

@media only screen and (min-width: 825px) {
  ol {
    
  }
  .two_column ol {
    column-count: 2;
    font-size: 1rem;
  }
}

ol li {
  counter-increment: custom-counter;
  position: relative;
  padding-left: 4em;
  /* margin-top: 0.6em; */
  margin-bottom: 0.8em;
}
ol li::before {
  content: counter(custom-counter) ". ";
  position: absolute;
  left: 0;
  text-align: right;
  width: 3em;
  color: var(--battleship_gray);
}
ol li a {
  color: var(--ash_gray);
  text-decoration: none;
}
ol li.active {
  background-color: var(--alabaster);
  border-radius: 0.125em;
  padding: 0.3em 2em 0.3em 4em;
  margin-top: 0.3em;
  margin-bottom: 0.3em;
}
ol li.active a {
  color: var(--smoky_black);
}
ol li a:hover {
  color: var(--alabaster);
}
ol li.active a:hover {
  color: var(--smoky_black);
}

/* --- About author ---------------------------------------------- */

.author_container {
  display: flex;
  justify-content: space-between;
  padding-left: 0.5em;
  margin-bottom: 3em;
  align-items: flex-end;
}

.author_photo {
  background-position: right 0px;
  background-image: url("{{ .Site.BaseURL }}Leonid-Pavlov-Photo.jpg");
  background-repeat: no-repeat;
  min-width: 217px;
  min-height: 217px;

}

/* HAT -------------- */

.hat_photo_box {
  width: 100%;
  height: calc( 1045 / 811 * var(--hat_width) - 6.5em );
  position: relative;
  transition: ease-in-out 0.5s;
  --hat_width: 250px;
}

.hat_photo_sep {
  background-position: right top;
  background-image: url("{{ .Site.BaseURL }}hat-v3.webp");
  background-repeat: no-repeat;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: calc( var(--hat_width) ) calc( 1045 / 811 * var(--hat_width) );
  width: calc( var(--hat_width) );
  height: calc( 1045 / 811 * var(--hat_width) );
  position: absolute;
  top: -1.5em;
  right: 50%;
  transform: translateX(50%);
  transition: ease-in-out 0.5s;
}
/* ... */

